# langsmith

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  flake.nix  renovate.json
.github/workflows/: ci.yml
.nix/: README.md  default.nix  shell.nix
examples/sample-app/i18n/: de.json  en.json  es.json  fr.json
examples/sample-app/src/: App.tsx  Button.tsx  constants.ts  services.ts  utils.ts
src/: main.rs
src/application/: extract_strings.rs  merge_i18n.rs  mod.rs  replace_strings.rs  translate_keys.rs
src/cli/: mod.rs  presenter.rs  progress.rs  wizard.rs
src/cli/commands/: extract.rs  merge.rs  mod.rs  replace.rs  setup.rs  translate.rs
src/domain/: mod.rs  models.rs  ports.rs
src/infrastructure/: config.rs  file_system.rs  mod.rs
src/infrastructure/code_replacer/: import_manager.rs  mod.rs  regex_replacer.rs
src/infrastructure/string_extractor/: js_extractor.rs  mod.rs
src/infrastructure/translators/: deepl.rs  mod.rs  openai.rs
