[package]
name = "langsmith"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.4"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
indicatif = "0.17"
owo-colors = "4.0"
assert_cmd = "2.0"
predicates = "3.1"
